[tool.poetry]
name = "arachne-gql"
version = "0.1.0"
description = "A library for generating graphql client code in python"
license = "MIT"
authors = ["Sam Potter <spotter1642@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/stpotter16/arachne-gql"
keywords = ["graphql"]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
